--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "karol7525@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    },
     "autoload" : {
         "psr-4": {
             "Framework\\": "src/Framework",
